syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "user/user.proto";

service InviteService {
  rpc get_invite_by_invite_id(InviteRequestByInviteId) returns (InviteResponse){}
  rpc get_all_invites(GetAllInvitesRequest) returns (InvitesResponse){}
  rpc get_invites_by_author_id(InvitesByAuthorIdRequest) returns (InvitesResponse){}
  rpc get_invites_by_invitee_id(GetInvitesByInviteeIdRequest) returns (InvitesResponse){}
  rpc create_invite(InviteRequest) returns (BaseResponse){}
  rpc update_invite(InviteRequest) returns (BaseResponse){}
  rpc delete_invite_by_id(DeleteInviteByIdRequest) returns (BaseResponse){}
  rpc delete_invites_by_author_id(DeleteInvitesByAuthorIdRequest) returns (BaseResponse){}
  rpc delete_invites_by_event_id(DeleteInvitesByEventIdRequest) returns (BaseResponse){}
  rpc delete_invites_by_invitee_id(DeleteInvitesByInviteeIdRequest) returns (BaseResponse){}
}

message GetAllInvitesRequest {
  GrpcUser requesting_user = 1;
  optional InviteStatus invite_status = 2;
}

message InvitesByAuthorIdRequest {
  string author_id = 1;
  GrpcUser requesting_user = 2;
  optional InviteStatus invite_status = 3;
}

message InviteRequestByInviteId {
  string invite_id = 1;
  GrpcUser requesting_user = 2;
}

message InviteResponse {
  int32 status_code = 1;
  optional GrpcInvite invite = 2;
  optional string message = 3;
}

message InviteRequest {
  GrpcInvite invite = 1;
  GrpcUser requesting_user = 2;
}

message GrpcInvite {
  string id = 1;
  string event_id = 2;
  string author_id = 3;
  string invitee_id = 4;
  InviteStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
  optional google.protobuf.Timestamp deleted_at = 7;
}

message ListOfInvites {
  repeated GrpcInvite invites = 1;
}

message InvitesResponse{
  int32 status_code = 1;
  optional ListOfInvites invites = 2;
  optional string message = 3;
}

message BaseResponse {
  int32 status_code = 1;
  optional string message = 2;
}

message DeleteInviteByIdRequest {
  string invite_id = 1;
  GrpcUser requesting_user = 2;
}

message DeleteInvitesByEventIdRequest {
  string event_id = 1;
}

message DeleteInvitesByAuthorIdRequest {
  string author_id = 1;
}

message DeleteInvitesByInviteeIdRequest {
  string invitee_id = 1;
}

message GetInvitesByInviteeIdRequest {
  string invitee_id = 1;
  GrpcUser requesting_user = 2;
  optional InviteStatus invite_status = 3;
}

enum InviteStatus {
  UNSPECIFIED = 0;
  PENDING = 1;
  ACCEPTED = 2;
  REJECTED = 3;
}
